--- a/src/components/Reader/Excel/_excel.scss
+++ b/src/components/Reader/Excel/_excel.scss
@@ -1,10 +1,15 @@
 .excel {
-  // display              : grid;
+  display              : grid;
   // grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   // gap                  : $spacing;
-  max-height: 482px;
+  // max-height: 482px;
   height    : 100%;
   overflow-y: scroll;
+
+  >div {
+    display: grid;
+    gap: 0.2rem;
+  }
 
   &__title {
     font-weight: bold;
@@ -18,6 +23,5 @@
     border-bottom   : 1px solid $editor-border;
     background-color: lighten($editor-background, 10%);
     color           : $editor-font-color;
-    border-radius   : $border-radius;
   }
 }
