--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,31 +1,41 @@
 @import './variables.scss';
 @import '../components/components';
 
-
-// Estilos para la app
+body{
+  margin: 0;
+  padding: 0;
+}
 .app {
-  background-color: $background-color;
-  padding         : $spacing;
-  font-size       : $font-size;
-  color           : $text-color;
+  background-color  : $background-color;
+  padding           : $spacing;
+  font-size         : $font-size;
+  color             : $text-color;
+  overflow          : hidden;
+  gap               : 1rem;
+  max-width         : 100vw;
+  min-height        : 100vh;
+  display           : grid;
+  grid-template-rows: repeat(2, min-content) 1fr;
+  box-sizing: border-box;
 
   &__title {
-    text-align   : center;
-    margin-bottom: $spacing;
+    text-align: center;
+    width     : 100%;
 
     h1 {
-      color    : $primary-color;
-      font-size: 2rem;
+      color  : $primary-color;
+      margin : 0;
+      padding: 0;
     }
   }
 
   &__file-actions {
-    margin-bottom: $spacing * 2;
+    width: 100%;
   }
 
   &__reader {
+    width           : 100%;
     background-color: #ffffff;
-    padding         : $spacing;
     border-radius   : $border-radius;
     box-shadow      : 0 4px 8px rgba(0, 0, 0, 0.1);
   }
