--- a/src/components/Reader/Excel/_excel.scss
+++ b/src/components/Reader/Excel/_excel.scss
@@ -1,10 +1,7 @@
 .excel {
   display              : grid;
-  // grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  // gap                  : $spacing;
-  // max-height: 482px;
   height    : 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   >div {
     display: grid;
