--- a/src/components/Reader/_reader.scss
+++ b/src/components/Reader/_reader.scss
@@ -14,5 +14,6 @@
     border-radius   : $border-radius;
     box-shadow      : 0 4px 8px rgba(0, 0, 0, 0.1);
     color           : $editor-font-color;
+    overflow-y      : auto;
   }
 }
