--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,7 @@ body{
   overflow          : hidden;
   gap               : 1rem;
   max-width         : 100vw;
+  max-height: 100vh;
   min-height        : 100vh;
   display           : grid;
   grid-template-rows: repeat(2, min-content) 1fr;
@@ -35,8 +36,10 @@ body{
 
   &__reader {
     width           : 100%;
+    height          : 100%; /* Agregado: Asegura que el lector ocupe toda la altura disponible */
     background-color: #ffffff;
     border-radius   : $border-radius;
     box-shadow      : 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow        : hidden;
   }
 }
