--- a/src/components/Reader/Json/_json.scss
+++ b/src/components/Reader/Json/_json.scss
@@ -1,31 +1,29 @@
-@import './Validation/validation';
-
 .json {
-  height: 100%;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 80% 15%; // 80% para el editor y 20% para la validación
-  gap: 1rem;
+	height: 100%;
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: 80% 15%;
+	gap: 1rem;
 
-  &__editor {
-    height: 100%; // Ocupa el 80% del contenedor padre
-    .monaco-editor {
-      border: 1px solid $editor-border;
-      border-radius: $border-radius;
-      height: 100%;
-    }
-  }
+	&__editor {
+		height: 100%;
+		.monaco-editor {
+			border: 1px solid $editor-border;
+			border-radius: $border-radius;
+			height: 100%;
+		}
+	}
 
-  &__validation {
-    height: 100%; // Ocupa el 20% del contenedor padre
-    overflow-y: auto; // Habilita el desplazamiento si el contenido se desborda
-    background-color: lighten($error-color, 40%);
-    padding: 0.5rem;
-    border-radius: $border-radius;
-    color: $error-color;
+	&__validation {
+		height: 100%;
+		overflow-y: auto;
+		background-color: lighten($error-color, 40%);
+		padding: 0.5rem;
+		border-radius: $border-radius;
+		color: $error-color;
 
-    p {
-      margin: 0;
-    }
-  }
+		p {
+			margin: 0;
+		}
+	}
 }
