--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -42,4 +42,18 @@ body {
 		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 		overflow: hidden;
 	}
+
+  &__login{
+    height: 100%;
+    display: grid;
+    justify-content: center;
+
+    gap: 1rem;
+
+    .login{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
 }
