--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,17 +1,16 @@
-@import './variables.scss';
-// @import '../components/components';
+@import './variables';
 @import '../views/Auth/auth';
 @import '../views/Home/home';
 
-body {
-	margin: 0;
-	padding: 0;
-}
 .app {
+	height: 100vh;
+	width: 100vw;
+
 	&__login {
 		height: 100%;
 		display: grid;
-		justify-content: center;
-		gap: 1rem;
+		margin: 0 auto;
+		width: 320px;
+		align-items: center;
 	}
 }
