--- a/src/views/Home/FileActions/fileAction.scss
+++ b/src/views/Home/FileActions/fileAction.scss
@@ -11,15 +11,23 @@
 	display: flex;
 	justify-content: space-between;
 
+	button {
+		width: 9.2rem;
+	}
 	&__upload {
+		display: flex;
+		gap: 0.5rem;
+
 		&--input {
 			label {
 				display: inline-block;
 				cursor: pointer;
 				background-color: $primary-color;
-				padding: 0.75rem 1.5rem;
-				border-radius: $border-radius;
+				padding: 0.75rem 1rem;
+				width: 6.5rem;
+				border-radius: 0.3rem;
 				font-weight: bold;
+				font-size: smaller;
 				transition: background-color 0.3s ease;
 				position: relative;
 				overflow: hidden;
